//grpc 登陆服务配置文件

syntax = "proto3";
package login.service.v1;
option go_package = "project_user/pkg/service/login.service.v1";


message CaptchaRequest {
  string mobile = 1;
}
message CaptchaResponse{
  string code = 1;
}
service LoginService {
  rpc GetCaptcha(CaptchaRequest) returns (CaptchaResponse) {}
}